--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,4 @@ api.exception.user.already_enabled.message=User already enabled.
 api.exception.user.not_exist.message=User does not exist.
 api.exception.user.username.already_exist.message=User already exist.
 api.exception.validation.message=Validation exception.
+api.exception.expenses.type.already_exist.message=Expense type already exist.
